Fix alignment errors.

--- a/css/styles.css
+++ b/css/styles.css
@@ -137,7 +137,6 @@ header {
 .landing-logo {
   display: flex;
   justify-content: center;
-  align-items: center;
   margin-top: 5px;
   color: azure;
 }
